jsinterop-ts-defs-test/src/test/resources/errors/access/JsTypeTsInterfaceWithStaticMember.java
package errors.access;

import com.vertispan.tsdefs.annotations.TsInterface;
import jsinterop.annotations.JsType;

@TsInterface
@JsType
public class JsTypeTsInterfaceWithStaticMember {

  public static String property = "INTERFACE STATIC PROPERTY";
}